ktlint is running (in aws-kotlin-repo-tools too now)